--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["cryptography", "development-tools::testing"]
 
 [dependencies]
 colored = "3.0.0"
-nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
+nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
 rand = "0.9.2"
 rand_distr = "0.5.1"
 rayon = { version = "1.11.0", optional = true }
@@ -20,7 +20,9 @@ serde_json = "1.0.148"
 [dev-dependencies]
 aes-gcm = "0.10.3"
 subtle = "2.6.1"
+criterion = "0.8"
 
 [features]
 default = []
 parallel = ["dep:rayon"]
+macros = []
