--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [main, master]
   pull_request:
   workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * 1"
 
 env:
   CARGO_TERM_COLOR: always
@@ -17,18 +19,34 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: Swatinem/rust-cache@v2
       - name: Format check
         run: cargo fmt -- --check
 
-  test:
+  clippy:
     needs: fmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
+      - name: Clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+  msrv:
+    needs: fmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@1.80
+      - uses: Swatinem/rust-cache@v2
+      - name: Check (MSRV)
+        run: cargo check --all-targets
+
+  test:
+    needs: [fmt, clippy, msrv]
     strategy:
       fail-fast: false
       matrix:
@@ -41,12 +59,21 @@ jobs:
       - uses: taiki-e/install-action@v2
         with:
           tool: nextest
-      - uses: actions/cache@v4
+      - uses: Swatinem/rust-cache@v2
+      - name: Build & test (nextest quick)
+        run: cargo nextest run --all-targets ${{ matrix.features }} --profile quick
+      - name: Build & test (nextest slow)
+        run: cargo nextest run --all-targets ${{ matrix.features }} --profile slow
+
+  calibration:
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: taiki-e/install-action@v2
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ matrix.features }}
-      - name: Build & test (nextest)
-        run: cargo nextest run --all-targets ${{ matrix.features }}
+          tool: nextest
+      - uses: Swatinem/rust-cache@v2
+      - name: Calibration (nextest)
+        run: cargo nextest run --all-targets --profile calibration
