--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["cryptography", "development-tools::testing"]
 
 [dependencies]
 colored = "3.0.0"
+libc = { version = "0.2", optional = true }
 nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
 rand = "0.9.2"
 rand_distr = "0.5.1"
@@ -21,8 +22,19 @@ serde_json = "1.0.148"
 aes-gcm = "0.10.3"
 subtle = "2.6.1"
 criterion = "0.8"
+num-bigint = "0.4"
+num-traits = "0.2"
+tokio = { version = "1", features = ["rt", "time", "macros", "rt-multi-thread"] }
+# For AES timing tests
+aes = "0.8"
+cipher = { version = "0.4", features = ["block-padding"] }
+# For ECC timing tests
+x25519-dalek = "2.0"
+curve25519-dalek = "4.1"
 
 [features]
 default = []
 parallel = ["dep:rayon"]
 macros = []
+# Enable PMU-based cycle counting on Apple Silicon (requires sudo)
+kperf = ["dep:libc"]
