--- a/.devenv/state/cargo-install/.crates.toml
+++ b/.devenv/state/cargo-install/.crates.toml
@@ -1,3 +1,8 @@
 [v1]
 "cargo-llvm-cov 0.6.21 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-llvm-cov"]
 "cargo-outdated 0.17.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["cargo-outdated"]
+"flamegraph 0.6.10 (registry+https://github.com/rust-lang/crates.io-index)" = [
+    "cargo-flamegraph",
+    "flamegraph",
+]
+"samply 0.13.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["samply"]
