--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ description = "Detect timing side channels in cryptographic code"
 keywords = ["security", "cryptography", "timing", "side-channel"]
 categories = ["cryptography", "development-tools::testing"]
 
+[workspace]
+members = [".", "timing-oracle-macros"]
+
 [dependencies]
+timing-oracle-macros = { path = "timing-oracle-macros", optional = true }
 colored = "3.0.0"
 nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
 rand = "0.9.2"
@@ -42,6 +46,21 @@ curve25519-dalek = "4.1"
 dudect-bencher = "0.6"
 regex = "1.10"
 tempfile = "3.8"
+# For expanded crypto test suite
+sha3 = "0.10"
+blake2 = "0.10"
+chacha20poly1305 = "0.10"
+rsa = "0.9"
+ring = "0.17"
+# Post-quantum crypto (C bindings via PQClean)
+pqcrypto-kyber = "0.8"
+pqcrypto-dilithium = "0.5"
+pqcrypto-falcon = "0.3"
+pqcrypto-sphincsplus = "0.7"
+sha2 = "0.10.9"
+pqcrypto-traits = "0.3.5"
+# For macro compile-time error tests
+trybuild = "1.0"
 
 [profile.release]
 debug = true
@@ -51,11 +70,12 @@ name = "comparison"
 harness = false
 
 [features]
-# By default, enable parallel bootstrap and platform-specific cycle counters
+# By default, enable parallel bootstrap, platform-specific cycle counters, and macros
 default = [
     "parallel",
     "kperf-default",
     "perf-default",
+    "macros",
 ]
 
 # Rayon-based parallel bootstrap (4-8x speedup on multi-core systems)
@@ -66,7 +86,9 @@ parallel = ["dep:rayon"]
 kperf-default = ["kperf"]
 perf-default = ["perf"]
 
+# Proc macro API (timing_test! macro)
+macros = ["dep:timing-oracle-macros"]
+
 # Internal features - use default features instead
-macros = []
 kperf = ["dep:kperf-rs"]
 perf = []
